<resources>
    <string name="app_name">Project UAS PBP</string>
    <string name="nama">Nama</string>
    <string name="batal">Batal</string>
    <string name="simpan">Simpan</string>
    <string name="tambah_pendaftaran">Tambah Pendaftaran</string>
    <string name="edit_pendaftaran">Edit Pendaftaran</string>
    <string name="tambah_transaksiObat">Tambah Transaksi Obat</string>
    <string name="edit_transaksiObat">Edit Pendaftaran</string>
    <string name="loading_text">Loading…</string>
    <string name="harga">Harga</string>
    <string name="stok">Stok</string>
    <string name="deksripsi">Deksripsi</string>
    <string name="buka_kamera">Buka kamera</string>
    <string name="pilih_dari_galeri">Pilih dari galeri</string>
    <string name="formulir_pendaftaran">Formulir Pendaftaran</string>
    <string name="nama_pendaftar">Nama Pendaftar</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="nomor_hp_pendaftar">Nomor HP Pendaftar</string>
    <string name="tanggal_periksa">Tanggal Periksa</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="keluhan">Keluhan</string>
    <string name="nomor_hp_pembeli">Nomor HP Pembeli</string>
    <string name="alamat_pembeli">Alamat Pembeli</string>
    <string name="nama_pembeli">Nama Pembeli</string>
    <string name="umur_pembeli">Umur Pembeli</string>
    <string name="jumlah_beli_obat">Jumlah Beli Obat</string>
</resources>